# ggai

./: .gitignore  Makefile  README.md  pyproject.toml
Formula/: ggai.rb
