[project]
name = "ggai"
version = "0.5.9"
description = "Helper for GeoGuessr training using OpenAI"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
    { name = "Rio Fujita", email = "rifujita@microsoft.com" }
]
requires-python = ">=3.14"
dependencies = [
    "openai>=2.28.0",
    "pillow>=12.1.1",
    "pyobjc>=12.1",
]

[project.urls]
Homepage = "https://github.com/rioriost/ggai"
Issues = "https://github.com/rioriost/ggai/issues"
Repository = "https://github.com/rioriost/ggai"

[project.scripts]
ggai = "ggai.main:main"

[project.optional-dependencies]
test = [
  "pytest>=9",
  "pytest-cov>=7",
]

[dependency-groups]
dev = [
  "build>=1.2.2",
  "twine>=6.1.0",
  "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
